---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_operator_family.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_OPERATOR_FAMILY
    CREATE_KW "create"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    FAMILY_KW "family"
    WHITESPACE " "
    OP_FAMILY_NAME
      PATH
        PATH_SEGMENT
          IDENT "f"
    WHITESPACE " "
    USING_METHOD
      USING_KW "using"
      WHITESPACE " "
      ACCESS_METHOD_REF
        IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_OPERATOR_FAMILY
    CREATE_KW "create"
    WHITESPACE " "
    OPERATOR_KW "operator"
    WHITESPACE " "
    FAMILY_KW "family"
    WHITESPACE " "
    OP_FAMILY_NAME
      PATH
        PATH_REF
          PATH_SEGMENT_REF
            NAME_REF
              IDENT "a"
        DOT "."
        PATH_SEGMENT
          IDENT "b"
    WHITESPACE " "
    USING_METHOD
      USING_KW "using"
      WHITESPACE " "
      ACCESS_METHOD_REF
        IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n\n"
